# nstool

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
include/: AssetProcess.h  CnmtProcess.h  EsCertProcess.h  EsTikProcess.h  FsProcess.h  GameCardProcess.h  IniProcess.h  KeyBag.h  KipProcess.h  MetaProcess.h  NacpProcess.h  NcaProcess.h  NroProcess.h  NsoProcess.h  PfsProcess.h  PkiValidator.h  RoMetadataProcess.h  RomfsProcess.h  Settings.h  types.h
